; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_python3.c_Py3Init_vim.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_python3.c_Py3Init_vim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Py3Init_vim.argv = internal global [2 x i32*] [i32* getelementptr inbounds ([20 x i32], [20 x i32]* @.str, i32 0, i32 0), i32* null], align 16
@.str = private unnamed_addr constant [20 x i32] [i32 47, i32 109, i32 117, i32 115, i32 116, i32 62, i32 110, i32 111, i32 116, i32 38, i32 101, i32 120, i32 105, i32 115, i32 116, i32 47, i32 102, i32 111, i32 111, i32 0], align 4
@vimmodule = common dso_local global i32 0, align 4
@vim_module = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @Py3Init_vim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Py3Init_vim() #0 {
  %1 = alloca i32*, align 8
  %2 = call i64 (...) @init_types()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %21

5:                                                ; preds = %0
  %6 = call i32 @PySys_SetArgv(i32 1, i32** getelementptr inbounds ([2 x i32*], [2 x i32*]* @Py3Init_vim.argv, i64 0, i64 0))
  %7 = call i32* @PyModule_Create(i32* @vimmodule)
  store i32* %7, i32** @vim_module, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  store i32* null, i32** %1, align 8
  br label %21

10:                                               ; preds = %5
  %11 = load i32*, i32** @vim_module, align 8
  %12 = call i64 @populate_module(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32* null, i32** %1, align 8
  br label %21

15:                                               ; preds = %10
  %16 = call i64 (...) @init_sys_path()
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32* null, i32** %1, align 8
  br label %21

19:                                               ; preds = %15
  %20 = load i32*, i32** @vim_module, align 8
  store i32* %20, i32** %1, align 8
  br label %21

21:                                               ; preds = %19, %18, %14, %9, %4
  %22 = load i32*, i32** %1, align 8
  ret i32* %22
}

declare dso_local i64 @init_types(...) #1

declare dso_local i32 @PySys_SetArgv(i32, i32**) #1

declare dso_local i32* @PyModule_Create(i32*) #1

declare dso_local i64 @populate_module(i32*) #1

declare dso_local i64 @init_sys_path(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
